[add] coreccion de folio_comprobacion para que no truenen el formulario

--- a/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
           <label for="folio_comprobacion">Folio de Comprobación</label>
-          <input type="text" formControlName="folio_comprobacion" [value]="comprobacion.folio_comrpobacion"
+          <input type="text" formControlName="folio_comprobacion" [value]="comprobacion.folio_comprobacion"
             class="form-control" id="folio_comprobacion">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
