--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -1,5 +1,5 @@
 <app-form-comrpobacion-header (onContinuar)="guardarFormHeader($event)" [lista_contribuyente]="lista_contribuyentes"
-  [lista_moneda]="lista_monedas" [lista_centro_costos]="lista_centros_costo"
+  [lista_moneda]="lista_monedas" [lista_centro_costos]="lista_centros_costo" [numero_comprobacion]='numero_comprobacion'
   [comprobacion_header]="comprobacion_header">
 </app-form-comrpobacion-header>
 <!-- Carga de Documentos -->
