--- a/src/app/modulos/gastos-viaje/comprobaciones/carga-doc-nacional/carga-doc-nacional.component.html
+++ b/src/app/modulos/gastos-viaje/comprobaciones/carga-doc-nacional/carga-doc-nacional.component.html
@@ -102,17 +102,9 @@
   </div>
   <div class="row">
     <div class="col-12">
-
-      <!-- <app-row-concepto *ngFor="let item of conceptos; let i = index" [detalle]="item" [contador]="i"
-        [catalogo_concepto]="lista_cuentas" (validarEstatus)='validarEstatus()'>
-      </app-row-concepto> -->
-      <app-tabla-conceptos-form [conceptos]="conceptos" [lista_cuentas]="lista_cuentas"></app-tabla-conceptos-form>
-      <div class="row text-right mt-3">
-        <div class="col-12">
-          <button class="btn btn-danger mr-2 " (click)="cancelar()"> Cancelar</button>
-          <button class="btn btn-primary mr-2 " (click)="agregarComprobacion()" [disabled]='!valido'>Añadir</button>
-        </div>
-      </div>
+      <app-tabla-conceptos-form [conceptos]="conceptos" [lista_cuentas]="lista_cuentas" (onCancelar)="cancelar()"
+        (onAgregar)="agregarComprobacion()">
+      </app-tabla-conceptos-form>
     </div>
   </div>
 </ng-container>
