--- a/src/app/compartidos/form-comrpobacion-header/form-comrpobacion-header.component.html
+++ b/src/app/compartidos/form-comrpobacion-header/form-comrpobacion-header.component.html
@@ -11,14 +11,16 @@
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="compania">Compañía <span class="requerido">*</span></label>
         <select2 [data]="lista_contribuyente" [options]="{placeholder: 'Seleccione un Compañia'}"
-          (valueChanged)="onContribuyenteSelected($event)" name="cnetro_costos" id="cnetro_costos">
+          [disabled]="numero_comprobacion" (valueChanged)="onContribuyenteSelected($event)" name="cnetro_costos"
+          id="cnetro_costos">
         </select2>
       </div>
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="cnetro_costos">Centro de Costos <span class="requerido">*</span> </label>
         <select2 [data]="lista_centro_costos" [options]="{placeholder: 'Seleccione un Centro de Costo'}"
-          (valueChanged)="onCECOSelected($event)" name="cnetro_costos" id="cnetro_costos">
+          [disabled]="numero_comprobacion" (valueChanged)="onCECOSelected($event)" name="cnetro_costos"
+          id="cnetro_costos">
         </select2>
       </div>
 
@@ -31,7 +33,7 @@
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="moneda">Moneda <span class="requerido">*</span> </label>
         <select2 [data]="lista_moneda" [options]="{placeholder: 'Seleccione una moneda'}"
-          (valueChanged)="onMonedaSelected($event)" name="moneda" id="moneda">
+          [disabled]="numero_comprobacion" (valueChanged)="onMonedaSelected($event)" name="moneda" id="moneda">
         </select2>
       </div>
 
@@ -56,12 +58,12 @@
         </div>
       </div>
 
-
     </div>
   </fieldset>
   <div class="row">
     <div class="col  text-right ">
-      <button [disabled]="!formulario_header.valid" type="submit" class="btn btn-primary ml-auto">Continuar</button>
+      <button [disabled]="!formulario_header.valid || numero_comprobacion" type="submit"
+        class="btn btn-primary ml-auto">Continuar</button>
     </div>
   </div>
 </form>
