--- a/src/app/modulos/gastos-viaje/comprobaciones/lista-comprobantes/lista-comprobantes.component.html
+++ b/src/app/modulos/gastos-viaje/comprobaciones/lista-comprobantes/lista-comprobantes.component.html
@@ -18,7 +18,7 @@
             <td>{{ concepto.uuid }}</td>
             <td>{{ concepto.concepto }} </td>
             <td>{{ concepto.cuenta }} </td>
-            <td>{{ concepto.importe  | currency: '$' }} </td>
+            <td>{{ concepto.importe | currency: '$' }} </td>
             <td>{{ concepto.anticipo ? 'Si' : 'No' }} </td>
             <td>{{ concepto.fecha_comprobante | date: 'yyyy/MM/dd' }} </td>
             <td><i class="fas fa-trash" (click)="eliminarConcepto(i)"></i></td>
@@ -40,7 +40,7 @@
           <tbody>
             <tr>
               <td class="font-weight-bold"> {{ anticipo? 'Monto de anticipo' : 'Monto aproximado'}}</td>
-              <td>{{ (totales ? totales.monto_solicitud : '') | currency: '$'  }} </td>
+              <td>{{ (totales ? totales.monto_solicitud : '') | currency: '$' }} </td>
             </tr>
             <tr>
               <td class="font-weight-bold">Total gastado</td>
@@ -48,7 +48,7 @@
             </tr>
             <tr>
               <td class="font-weight-bold">Monto reembolsable</td>
-              <td> {{ (totales ? totales.monto_reembolsable : '')  | currency: '$' }} </td>
+              <td> {{ (totales ? totales.monto_reembolsable : '') | currency: '$' }} </td>
             </tr>
             <tr>
               <td class="font-weight-bold">Monto a devolver</td>
@@ -72,7 +72,7 @@
     </div>
   </div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <a class="btn btn-primary" [href]="url_politicas ? url_politicas : '#'" target="blank"> Politica de Viajes
   </a>
-</div>
+</div> -->
