--- a/src/app/compartidos/form-comrpobacion-header/form-comrpobacion-header.component.html
+++ b/src/app/compartidos/form-comrpobacion-header/form-comrpobacion-header.component.html
@@ -62,6 +62,8 @@
   </fieldset>
   <div class="row">
     <div class="col  text-right ">
+      <button *ngIf="!numero_comprobacion" type="button" (click)="cancelarComprobacion()"
+        class="btn btn-danger ml-auto mr-2">Cancelar</button>
       <button [disabled]="!formulario_header.valid || numero_comprobacion" type="submit"
         class="btn btn-primary ml-auto">Continuar</button>
     </div>
